# wdb_Web-Daten-beschaffung

./: .env.examle  .gitignore  Dockerfile  README.md  RegEx.ipynb  XPath_JsonPath.ipynb  createdb.sql  docker-compose.yml  evaluation.md  menu_code.html  mongo-init.js  pyproject.toml  recon.html  recon.ipynb  regex.py  xpath_jsonpath.py
.github/workflows/: add-ip-to-atlas.yml  delete-ip-from-atlas.yml  scraper.yml
aufgaben/: RegEx.ipynb  XPath_JsonPath.ipynb  regex.py
docs/: README.md
src/: migros.ipynb  migros_scraper.py  models.py  out.json  parsley-product-details.json  product-card.json  product-detail.json
src/factories/: category_factory.py  product_factory.py
src/models/: category.py  nutrition.py  offer.py  product.py  product_factory.py
src/services/: mongo_service.py  mongo_sql_sync.py  product_service.py
src/utils/: parsing_utils.py  yeeter.py
tests/: test_migros_scraper.py  test_mongo_service.py  test_product_factory.py  test_product_factory_unit.py
tests/data/: 100035819.json  100100300000-2024-09-26T12:21:23.json  100124900000-2024-10-05T19:23:58.json  220622085000-2024-09-16T11:03:35.json  base_categories.py  higher_level_categories.py  koriander.py  oliveoil.py  oliveoil_offer_missing.py  oliveoil_price_change.py  oliveoil_price_change_2.py  penne.py
