[tool.poetry]
name = "wdb-web-daten-beschaffung"
version = "0.1.0"
description = ""
authors = ["BR4GER <benjamin.wuermli@students.fhnw.ch>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.1"
lxml = "^5.3.0"
jsonpath-ng = "^1.6.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
